# qwc-config-generator

./: Dockerfile  Dockerfile-noqgis  MSSQL_SUPPORT_SUMMARY.md  README.md  capabilities_reader.py  configGeneratorConfig-example.json  config_generator.py  config_generator_cli.py  download_json_schemas.py  map_viewer_config.py  ogc_service_config.py  permissions_config.py  pyproject.toml  requirements.txt  server.py  service_config.py  tenantConfig-example.json  test.py  test_mssql_parsing.py  test_mssql_support.py
.github/workflows/: main.yml
config_generator/: capabilities_reader.py  categorize_groups_script.py  config_generator.py  data_service_config.py  dnd_form_generator.py  ext_service_config.py  external_layer_utils.py  feature_info_service_config.py  legend_service_config.py  map_viewer_config.py  ogc_service_config.py  permission_query.py  permissions_config.py  permissions_query.py  print_service_config.py  qgs_reader.py  search_service_config.py  service_config.py  theme_reader.py
schemas/: qwc-config-generator.json  schema-versions-2023-lts.json  schema-versions.json
src/: config_generator_cli.py  download_json_schemas.py  schema-versions.json  server.py  server.wsgi
src/config_generator/: capabilities_reader.py  config_generator.py  data_service_config.py  dnd_form_generator.py  document_service_config.py  ext_service_config.py  external_layer_utils.py  feature_info_service_config.py  legend_service_config.py  map_viewer_config.py  mapinfo_service_config.py  ogc_service_config.py  permissions_config.py  qgs_reader.py  (+6 more)
tests/: permissions_tests.py
