[project]
name = "qwc-config-generator"
version = "v2025.02.10"
description = "QWC ConfigGenerator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask_login~=0.6.3",
    "jsonschema~=4.20.0",
    "psycopg2~=2.9.9",
    "qwc-services-core~=1.4.0",
    "requests~=2.32.0",
    "SQLAlchemy~=2.0.29",
    "Flask~=3.0.0",
    "Werkzeug~=3.0.6",
    "python-dotenv~=1.0.0",
    "deepmerge~=1.1.0"
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
