[project]
name = "qwc-config-generator"
version = "v2026.02.09"
description = "QWC ConfigGenerator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask-Login~=0.6.3",
    "jsonschema~=4.25.0",
    "psycopg2~=2.9.9",
    "qwc-services-core~=1.5.0",
    "requests~=2.32.0",
    "SQLAlchemy~=2.0.29",
    "Flask~=3.1.0",
    "Werkzeug~=3.1.4",
    "deepmerge~=2.0",
    "jsonpath-ng>=1.7.0",
    "flask-restx~=1.3.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
